fix small font size on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,8 +12,8 @@ $body-color: #000000 !default;
 $sidebar-fg-color: #000000 !default;
 
 $sidebar-width: 11rem !default;
-$root-font-size: 1rem !default;
-$root-line-height: 1.3 !default;
+$root-font-size: 1.2rem !default;
+$root-line-height: 1.2 !default;
 $large-font-size: 1.3rem !default;
 
 $root-font-family: "Source Serif Pro", serif !default;
